Update QueryRuleRetrieverBuilder.java
Fix compiler errors in backport PR